made navbar responsive, when md or larger screen size the nav bar is 1 horizontal bar, when smaller, becomes a stacked bar of 2 rows. styled navbar to a black and white design. created js folder for future scripts

--- a/index.html
+++ b/index.html
@@ -11,27 +11,40 @@
 
 <body>
     <div class="container">
-        <header>
-            <nav class="row">
-              <div class="col-sm">
-                Joanna Wheeler
-                <img class="redirectIcon" src="images/github.svg">
-                <img class="redirectIcon" src="images/linkedin.svg">
-              </div>
-              <div class="col-sm text-right">
-                <a href="">About</a>
-                <a href="">Portfolio</a>
-                <a href="">Skills</a>
-                <a href="">Contact</a>
-              </div>
-            </nav>
-        </header>
-        <main>
+      <header>
+        <nav>
+            <div class="row borderX">
+                <div id="navTextLeft" class="col-xs-12 col-md-6 alignCenter borderX">
+                    Joanna Wheeler
+                    <img class="redirectIcon" src="images/github.svg">
+                    <img class="redirectIcon" src="images/linkedin.svg">
+                </div>
+                <div class="col-xs-12 col-md-6 navLinks borderX">
+                    <div class="row">
+                        <div class="col-3 text-center">
 
+                              <a class="navLinks" href="">About</a>
+
+                        </div>
+                        <div class="col-3 text-center">
+                            <a class="navLinks" href="">Portfolio</a>
+                        </div>
+                        <div class="col-3 text-center">
+                            <a class="navLinks" href="">Skills</a>
+                        </div>
+                        <div class="col-3 text-center">
+                            <a class="navLinks" href="">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+      </header>
+        <main>
             <section>
                 <img src="">
                 <header>
-                    <h2>I'm Joanna, a Full Stack Web Developer with an emphasis in Javascript. Thank you for checking out my website! I am currently looking for new opportunities. </h2>
+                    <h2>I'm Joanna, a Full Stack Web Developer with an emphasis in Javascript. Thank you for checking out my website! I am currently looking for new opportunities.</h2>
                 </header>
             </section>
         </main>
@@ -42,5 +55,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+<script src="js/mysite.js"></script>
 
 </html>
