aligned links vertically in nav bar, aligned 'Joanna Wheeler' and icons vertically and gave it a white background that floats in front of a black background. made container fluid to stretch across screen. made navbar responsive to stack correctly at sm media query. made 'Joanna Wheeler' stay left when md or bigger, and center when sm or smaller. added titles to sections. added headers to each section (about, portfolio, skills, contact)

--- a/index.html
+++ b/index.html
@@ -10,43 +10,64 @@
 </head>
 
 <body>
-    <div class="container">
-      <header>
-        <nav>
-            <div class="row borderX">
-                <div id="navTextLeft" class="col-xs-12 col-md-6 alignCenter borderX">
-                    Joanna Wheeler
-                    <img class="redirectIcon" src="images/github.svg">
-                    <img class="redirectIcon" src="images/linkedin.svg">
-                </div>
-                <div class="col-xs-12 col-md-6 navLinks borderX">
-                    <div class="row">
-                        <div class="col-3 text-center">
-
-                              <a class="navLinks" href="">About</a>
-
-                        </div>
-                        <div class="col-3 text-center">
-                            <a class="navLinks" href="">Portfolio</a>
-                        </div>
-                        <div class="col-3 text-center">
-                            <a class="navLinks" href="">Skills</a>
-                        </div>
-                        <div class="col-3 text-center">
-                            <a class="navLinks" href="">Contact</a>
+    <div class="container-fluid">
+            <nav>
+                <div class="row borderX">
+                    <div id="navTextLeft" class="col-xs-12 col-md-6 alignCenter borderX"><span id="JoannaWheeler">
+                        Joanna Wheeler
+                        <img class="redirectIcon" src="images/github.svg">
+                        <img class="redirectIcon" src="images/linkedin.svg">
+                        </span>
+                    </div>
+                    <div class="col-xs-12 col-md-6 navLinks borderX">
+                        <div class="row">
+                            <div class="col-3 text-center verticalAlign">
+                                <a class="navLinks" href="">About</a>
+                            </div>
+                            <div class="col-3 text-center verticalAlign">
+                                <a class="navLinks" href="">Portfolio</a>
+                            </div>
+                            <div class="col-3 text-center verticalAlign">
+                                <a class="navLinks" href="">Skills</a>
+                            </div>
+                            <div class="col-3 text-center verticalAlign">
+                                <a class="navLinks" href="">Contact</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-      </header>
+            </nav>
         <main>
-            <section>
-                <img src="">
-                <header>
-                    <h2>I'm Joanna, a Full Stack Web Developer with an emphasis in Javascript. Thank you for checking out my website! I am currently looking for new opportunities.</h2>
-                </header>
-            </section>
+            <div class="row">
+                <div class="col text-center">
+                    <section>
+                        <img src="">
+                        <h3>About</h3>
+                            <h2>I'm Joanna, a Full Stack Web Developer with an emphasis in Javascript. Thank you for checking out my website! I am currently looking for new opportunities.</h2>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <section>
+                        <h3>Portfolio</h3>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <section>
+                        <h3>Skills</h3>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <section>
+                        <h3>Contact</h3>
+                    </section>
+                </div>
+            </div>
         </main>
         <footer>
         </footer>
